Update release notes

--- a/v1.20.0-rc.1.md
+++ b/v1.20.0-rc.1.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0-rc.1
 
 The release notes have been generated for the commit range
-[v1.19.0...209938c](https://github.com/cri-o/cri-o/compare/v1.19.0...209938cf1685e9d87dc65b15979705833ba1ac2c) on Thu, 10 Dec 2020 19:40:22 UTC.
+[v1.19.0...62afeec](https://github.com/cri-o/cri-o/compare/v1.19.0...62afeec008f6eb0b0ab9be3697eeec6066d14dbd) on Fri, 11 Dec 2020 00:06:58 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-209938cf1.tar.gz][0]
+[crio-62afeec00.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-209938cf1.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-62afeec00.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -51,6 +51,7 @@ Download the static release bundle via our Google Cloud Bucket:
 #### Bug or Regression
  - CRIO allow to run pods with default runtime profile in the Pod.Spec, if seccomp is disabled ([#4370](https://github.com/cri-o/cri-o/pull/4370), [@aojea](https://github.com/aojea))
  - Crio-o portMapping dual-stack support ([#4361](https://github.com/cri-o/cri-o/pull/4361), [@aojea](https://github.com/aojea))
+ - Fix a bug where a timeout in RunPodSandbox or CreateContainer requests caused CRI-O to delete the newly created resource. Now, it saves that resource, until the kubelet re-requests it, thus allowing kubelet and CRI-O to reconcile quicker when nodes are under load. ([#4430](https://github.com/cri-o/cri-o/pull/4430), [@haircommander](https://github.com/haircommander))
  - Fix bug where runAsUser would only work with runAsGroup if userns annotations were specified ([#4300](https://github.com/cri-o/cri-o/pull/4300), [@haircommander](https://github.com/haircommander))
  - Fix bug where we attempted to chown with the mappings configured on server level, when they could have been from annotations ([#4294](https://github.com/cri-o/cri-o/pull/4294), [@haircommander](https://github.com/haircommander))
  - Fix making /etc/resolv.conf bind-mount to be readonly for a readonly container. ([#4268](https://github.com/cri-o/cri-o/pull/4268), [@kolyshkin](https://github.com/kolyshkin))
