Update release notes

--- a/v1.20.0.md
+++ b/v1.20.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0
 
 The release notes have been generated for the commit range
-[v1.19.0...d388528](https://github.com/cri-o/cri-o/compare/v1.19.0...d388528dbed26b93c5bc1c89623607a1e597aa57) on Fri, 11 Dec 2020 18:11:50 UTC.
+[v1.19.0...845747f](https://github.com/cri-o/cri-o/compare/v1.19.0...845747f7eb03ee8c8e97b29272349baaabbb3166) on Fri, 08 Jan 2021 23:10:07 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-d388528db.tar.gz][0]
+[crio-845747f7e.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-d388528db.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-845747f7e.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -67,6 +67,7 @@ Download the static release bundle via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a goroutine leak when checking image pulling progress ([#4413](https://github.com/cri-o/cri-o/pull/4413), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed a bug where image authentication failed from not finding the auth file. ([#4462](https://github.com/cri-o/cri-o/pull/4462), [@QiWang19](https://github.com/QiWang19))
  - Moves shm size to a handler-allowed annotation ([#4417](https://github.com/cri-o/cri-o/pull/4417), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Update broken link for podman tutorial ([#4179](https://github.com/cri-o/cri-o/pull/4179), [@lovebaby979](https://github.com/lovebaby979))
  - Update broken link for tutorials ([#4180](https://github.com/cri-o/cri-o/pull/4180), [@lovebaby979](https://github.com/lovebaby979))
@@ -118,7 +119,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/sean-/seed: [e2103e2](https://github.com/sean-/seed/tree/e2103e2)
 - github.com/src-d/gcfg: [v1.4.0](https://github.com/src-d/gcfg/tree/v1.4.0)
 - github.com/vdemeester/k8s-pkg-credentialprovider: [v1.17.4](https://github.com/vdemeester/k8s-pkg-credentialprovider/tree/v1.17.4)
-- github.com/willf/bitset: [d5bec33](https://github.com/willf/bitset/tree/d5bec33)
+- github.com/willf/bitset: [v1.1.11](https://github.com/willf/bitset/tree/v1.1.11)
 - golang.org/dl: 82a15e2
 - gopkg.in/src-d/go-billy.v4: v4.3.2
 - gopkg.in/src-d/go-git-fixtures.v3: v3.5.0
@@ -144,10 +145,12 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/Azure/go-autorest/logger: [v0.1.0 → v0.2.0](https://github.com/Azure/go-autorest/logger/compare/v0.1.0...v0.2.0)
 - github.com/Azure/go-autorest/tracing: [v0.5.0 → v0.6.0](https://github.com/Azure/go-autorest/tracing/compare/v0.5.0...v0.6.0)
 - github.com/GoogleCloudPlatform/testgrid: [v0.0.10 → v0.0.30](https://github.com/GoogleCloudPlatform/testgrid/compare/v0.0.10...v0.0.30)
-- github.com/Microsoft/go-winio: [3fe6c52 → v0.4.15](https://github.com/Microsoft/go-winio/compare/3fe6c52...v0.4.15)
+- github.com/Microsoft/go-winio: [3fe6c52 → v0.4.16](https://github.com/Microsoft/go-winio/compare/3fe6c52...v0.4.16)
+- github.com/Microsoft/hcsshim: [5eafd15 → v0.8.14](https://github.com/Microsoft/hcsshim/compare/5eafd15...v0.8.14)
 - github.com/aws/aws-sdk-go: [v1.28.2 → v1.35.24](https://github.com/aws/aws-sdk-go/compare/v1.28.2...v1.35.24)
 - github.com/bazelbuild/rules_go: [v0.23.3 → v0.22.1](https://github.com/bazelbuild/rules_go/compare/v0.23.3...v0.22.1)
-- github.com/cilium/ebpf: [9f1617e → 4032b1d](https://github.com/cilium/ebpf/compare/9f1617e...4032b1d)
+- github.com/cilium/ebpf: [9f1617e → v0.2.0](https://github.com/cilium/ebpf/compare/9f1617e...v0.2.0)
+- github.com/containerd/cgroups: [0dbf7f0 → 4cbc285](https://github.com/containerd/cgroups/compare/0dbf7f0...4cbc285)
 - github.com/containerd/containerd: [v1.3.6 → v1.4.1](https://github.com/containerd/containerd/compare/v1.3.6...v1.4.1)
 - github.com/containerd/continuity: [aaeac12 → 0f16d7a](https://github.com/containerd/continuity/compare/aaeac12...0f16d7a)
 - github.com/containerd/ttrpc: [v1.0.1 → v1.0.2](https://github.com/containerd/ttrpc/compare/v1.0.1...v1.0.2)
@@ -158,7 +161,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/containers/conmon: [v2.0.17+incompatible → v2.0.20+incompatible](https://github.com/containers/conmon/compare/v2.0.17...v2.0.20)
 - github.com/containers/image/v5: [v5.5.1 → v5.7.0](https://github.com/containers/image/v5/compare/v5.5.1...v5.7.0)
 - github.com/containers/psgo: [v1.4.0 → v1.5.1](https://github.com/containers/psgo/compare/v1.4.0...v1.5.1)
-- github.com/containers/storage: [v1.20.2 → v1.24.0](https://github.com/containers/storage/compare/v1.20.2...v1.24.0)
+- github.com/containers/storage: [v1.20.2 → v1.24.4](https://github.com/containers/storage/compare/v1.20.2...v1.24.4)
 - github.com/coreos/etcd: [v3.3.10+incompatible → v3.3.13+incompatible](https://github.com/coreos/etcd/compare/v3.3.10...v3.3.13)
 - github.com/docker/docker: [aa6a989 → bd33bbf](https://github.com/docker/docker/compare/aa6a989...bd33bbf)
 - github.com/evanphx/json-patch: [e83c0a1 → v4.9.0+incompatible](https://github.com/evanphx/json-patch/compare/e83c0a1...v4.9.0)
@@ -172,9 +175,10 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/google/cadvisor: [v0.37.0 → v0.38.5](https://github.com/google/cadvisor/compare/v0.37.0...v0.38.5)
 - github.com/google/go-cmp: [v0.4.0 → v0.5.2](https://github.com/google/go-cmp/compare/v0.4.0...v0.5.2)
 - github.com/google/pprof: [d4f498a → 3e6fc7f](https://github.com/google/pprof/compare/d4f498a...3e6fc7f)
-- github.com/google/uuid: [v1.1.1 → v1.1.2](https://github.com/google/uuid/compare/v1.1.1...v1.1.2)
+- github.com/google/uuid: [v1.1.1 → v1.1.4](https://github.com/google/uuid/compare/v1.1.1...v1.1.4)
 - github.com/gorilla/mux: [v1.7.4 → v1.8.0](https://github.com/gorilla/mux/compare/v1.7.4...v1.8.0)
 - github.com/gorilla/websocket: [v1.4.0 → v1.4.2](https://github.com/gorilla/websocket/compare/v1.4.0...v1.4.2)
+- github.com/hashicorp/errwrap: [v1.0.0 → v1.1.0](https://github.com/hashicorp/errwrap/compare/v1.0.0...v1.1.0)
 - github.com/hashicorp/go-multierror: [v1.0.0 → v1.1.0](https://github.com/hashicorp/go-multierror/compare/v1.0.0...v1.1.0)
 - github.com/hashicorp/golang-lru: [v0.5.1 → v0.5.3](https://github.com/hashicorp/golang-lru/compare/v0.5.1...v0.5.3)
 - github.com/ianlancetaylor/demangle: [5e5cf60 → 28f6c0f](https://github.com/ianlancetaylor/demangle/compare/5e5cf60...28f6c0f)
@@ -182,7 +186,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [81b9770 → ed3125c](https://github.com/insomniacslk/dhcp/compare/81b9770...ed3125c)
 - github.com/jmespath/go-jmespath: [c2b33e8 → v0.4.0](https://github.com/jmespath/go-jmespath/compare/c2b33e8...v0.4.0)
 - github.com/karrick/godirwalk: [v1.7.5 → v1.16.1](https://github.com/karrick/godirwalk/compare/v1.7.5...v1.16.1)
-- github.com/klauspost/compress: [v1.10.8 → v1.11.2](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.2)
+- github.com/klauspost/compress: [v1.10.8 → v1.11.6](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.6)
 - github.com/klauspost/pgzip: [v1.2.4 → v1.2.5](https://github.com/klauspost/pgzip/compare/v1.2.4...v1.2.5)
 - github.com/kr/pretty: [v0.2.0 → v0.2.1](https://github.com/kr/pretty/compare/v0.2.0...v0.2.1)
 - github.com/maxbrunsfeld/counterfeiter/v6: [v6.2.3 → v6.3.0](https://github.com/maxbrunsfeld/counterfeiter/v6/compare/v6.2.3...v6.3.0)
@@ -191,9 +195,10 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/moby/vpnkit: [6bc1679 → v0.4.0](https://github.com/moby/vpnkit/compare/6bc1679...v0.4.0)
 - github.com/onsi/ginkgo: [v1.14.0 → v1.14.1](https://github.com/onsi/ginkgo/compare/v1.14.0...v1.14.1)
 - github.com/onsi/gomega: [v1.10.1 → v1.10.3](https://github.com/onsi/gomega/compare/v1.10.1...v1.10.3)
-- github.com/opencontainers/selinux: [v1.5.2 → v1.6.0](https://github.com/opencontainers/selinux/compare/v1.5.2...v1.6.0)
+- github.com/opencontainers/selinux: [v1.5.2 → v1.8.0](https://github.com/opencontainers/selinux/compare/v1.5.2...v1.8.0)
 - github.com/openshift/imagebuilder: [v1.1.4 → v1.1.6](https://github.com/openshift/imagebuilder/compare/v1.1.4...v1.1.6)
 - github.com/pkg/diff: [5319263 → 5b29258](https://github.com/pkg/diff/compare/5319263...5b29258)
+- github.com/pquerna/ffjson: [dac163c → aa0246c](https://github.com/pquerna/ffjson/compare/dac163c...aa0246c)
 - github.com/prometheus/procfs: [v0.1.3 → v0.2.0](https://github.com/prometheus/procfs/compare/v0.1.3...v0.2.0)
 - github.com/psampaz/go-mod-outdated: [v0.6.0 → v0.7.0](https://github.com/psampaz/go-mod-outdated/compare/v0.6.0...v0.7.0)
 - github.com/quobyte/api: [v0.1.2 → v0.1.8](https://github.com/quobyte/api/compare/v0.1.2...v0.1.8)
@@ -209,6 +214,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/spf13/cobra: [v1.0.0 → v1.1.1](https://github.com/spf13/cobra/compare/v1.0.0...v1.1.1)
 - github.com/spf13/viper: [v1.6.1 → v1.7.0](https://github.com/spf13/viper/compare/v1.6.1...v1.7.0)
 - github.com/storageos/go-api: [343b3ef → v2.2.0+incompatible](https://github.com/storageos/go-api/compare/343b3ef...v2.2.0)
+- github.com/syndtr/gocapability: [d983527 → 42c35b4](https://github.com/syndtr/gocapability/compare/d983527...42c35b4)
 - github.com/uber/jaeger-client-go: [v2.22.1+incompatible → v2.24.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.22.1...v2.24.0)
 - github.com/ulikunitz/xz: [v0.5.7 → v0.5.8](https://github.com/ulikunitz/xz/compare/v0.5.7...v0.5.8)
 - github.com/vbauerster/mpb/v5: [v5.2.2 → v5.3.0](https://github.com/vbauerster/mpb/v5/compare/v5.2.2...v5.3.0)
@@ -219,10 +225,11 @@ Download the static release bundle via our Google Cloud Bucket:
 - golang.org/x/crypto: 75b2880 → 7f63de1
 - golang.org/x/exp: da58074 → 6cc2880
 - golang.org/x/lint: fdd1cda → 738671d
-- golang.org/x/net: ab34263 → 69a7880
+- golang.org/x/net: ab34263 → 6772e93
 - golang.org/x/oauth2: bf48bf1 → 9fd6049
 - golang.org/x/sync: 6e8e738 → 67f06af
-- golang.org/x/sys: ddb9806 → 5cba982
+- golang.org/x/sys: ddb9806 → 16f7687
+- golang.org/x/term: ad39bd3 → 7de9c90
 - golang.org/x/text: v0.3.3 → v0.3.4
 - golang.org/x/time: 555d28b → 3af7569
 - golang.org/x/tools: c1934b7 → 079ba7b
