--- a/v1.19.1.md
+++ b/v1.19.1.md
@@ -12,14 +12,14 @@
 # CRI-O v1.19.1
 
 The release notes have been generated for the commit range
-[v1.19.0...c9c3658](https://github.com/cri-o/cri-o/compare/v1.19.0...c9c3658d7ac818c560c4457aa85e483d8235e927) on Fri, 15 Jan 2021 01:33:35 UTC.
+[v1.19.0...3846aab](https://github.com/cri-o/cri-o/compare/v1.19.0...3846aabe25ecf099f3e4d85b199c6670fd52e2b3) on Mon, 18 Jan 2021 11:08:50 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-c9c3658d7.tar.gz][0]
+[crio-3846aabe2.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-c9c3658d7.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-3846aabe2.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -35,10 +35,17 @@ Download the static release bundle via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
-_Nothing has changed._
+- bazil.org/fuse: 371fbbd
+- github.com/sclevine/agouti: [v3.0.0+incompatible](https://github.com/sclevine/agouti/tree/v3.0.0)
 
 ### Changed
+- github.com/containerd/continuity: [aaeac12 → 0f16d7a](https://github.com/containerd/continuity/compare/aaeac12...0f16d7a)
+- github.com/containers/buildah: [v1.14.9 → v1.15.1](https://github.com/containers/buildah/compare/v1.14.9...v1.15.1)
+- github.com/containers/common: [v0.9.1 → v0.14.7](https://github.com/containers/common/compare/v0.9.1...v0.14.7)
 - github.com/containers/storage: [v1.20.2 → v1.20.5](https://github.com/containers/storage/compare/v1.20.2...v1.20.5)
+- github.com/fsouza/go-dockerclient: [v1.6.3 → v1.6.5](https://github.com/fsouza/go-dockerclient/compare/v1.6.3...v1.6.5)
+- github.com/openshift/imagebuilder: [v1.1.4 → v1.1.5](https://github.com/openshift/imagebuilder/compare/v1.1.4...v1.1.5)
+- github.com/seccomp/containers-golang: [v0.4.1 → v0.5.0](https://github.com/seccomp/containers-golang/compare/v0.4.1...v0.5.0)
 
 ### Removed
 _Nothing has changed._
