Update release notes

--- a/v1.19.1.md
+++ b/v1.19.1.md
@@ -12,14 +12,14 @@
 # CRI-O v1.19.1
 
 The release notes have been generated for the commit range
-[v1.19.0...3846aab](https://github.com/cri-o/cri-o/compare/v1.19.0...3846aabe25ecf099f3e4d85b199c6670fd52e2b3) on Mon, 18 Jan 2021 11:08:50 UTC.
+[v1.19.0...4b82b5f](https://github.com/cri-o/cri-o/compare/v1.19.0...4b82b5fba63d76a6f7fc2ac2221afd5258d0fe63) on Wed, 20 Jan 2021 12:57:50 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-3846aabe2.tar.gz][0]
+[crio-4b82b5fba.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-3846aabe2.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-4b82b5fba.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -31,6 +31,7 @@ Download the static release bundle via our Google Cloud Bucket:
 
 #### Uncategorized
  - Crio-o portMapping dual-stack support ([#4399](https://github.com/cri-o/cri-o/pull/4399), [@aojea](https://github.com/aojea))
+ - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4497](https://github.com/cri-o/cri-o/pull/4497), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
