Update release notes

--- a/v1.18.4.md
+++ b/v1.18.4.md
@@ -1,22 +1,24 @@
 # CRI-O v1.18.4
 
 The release notes have been generated for the commit range
-[v1.18.3...ee91284](https://github.com/cri-o/cri-o/compare/v1.18.3...ee9128444bec105c32940d1545edc37d6dde537f) on Tue, 10 Nov 2020 18:48:19 UTC.
+[v1.18.3...be796d1](https://github.com/cri-o/cri-o/compare/v1.18.3...be796d1a0acf01c889a404fdbf59ca831cc6eea5) on Wed, 20 Jan 2021 22:47:00 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-ee9128444.tar.gz][0]
+[crio-be796d1a0.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-ee9128444.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-be796d1a0.tar.gz
 
 ## Changes by Kind
 
 ### Other (Bug, Cleanup or Flake)
 
 - Fixed regression where it was not able to run exec any more when compiling CRI-O with newer go versions ([#4192](https://github.com/cri-o/cri-o/pull/4192), [@saschagrunert](https://github.com/saschagrunert))
+- CRI-O now sets `inactive-or-failed` on scopes if using the systemd cgroup manager and if systemd version is >= 236 ([#4453](https://github.com/cri-o/cri-o/pull/4453), [@haircommander](https://github.com/haircommander))
 - Fix a bug where a sudden reboot causes incomplete image writes. This could cause image storage to be corrupted, resulting in an error `layer not known`. ([#3972](https://github.com/cri-o/cri-o/pull/3972), [@giuseppe](https://github.com/giuseppe))
 - Fixed a bug where a container creation failure caused that container to leak in the runtime ([#4237](https://github.com/cri-o/cri-o/pull/4237), [@haircommander](https://github.com/haircommander))
+- Fixed a bug where crictl only showed pod level stats, not container level stats. ([#4043](https://github.com/cri-o/cri-o/pull/4043), [@haircommander](https://github.com/haircommander))
 
 
 
