--- a/v1.19.1.md
+++ b/v1.19.1.md
@@ -12,20 +12,21 @@
 # CRI-O v1.19.1
 
 The release notes have been generated for the commit range
-[v1.19.0...4b82b5f](https://github.com/cri-o/cri-o/compare/v1.19.0...4b82b5fba63d76a6f7fc2ac2221afd5258d0fe63) on Wed, 20 Jan 2021 12:57:50 UTC.
+[v1.19.0...6de578b](https://github.com/cri-o/cri-o/compare/v1.19.0...6de578b660311dc55dbd9827f3d06df3b9133e5a) on Wed, 20 Jan 2021 23:20:45 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-4b82b5fba.tar.gz][0]
+[crio-6de578b66.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-4b82b5fba.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-6de578b66.tar.gz
 
 ## Changelog since v1.19.0
 
 ### Changes by Kind
 
 #### Bug or Regression
+ - Fix a goroutine leak when checking image pulling progress ([#4482](https://github.com/cri-o/cri-o/pull/4482), [@haircommander](https://github.com/haircommander))
  - Fix occasional "chown: interrupted system call" error on container creation. ([#4340](https://github.com/cri-o/cri-o/pull/4340), [@kolyshkin](https://github.com/kolyshkin))
  - Fixed a bug where a container creation failure caused that container to leak in the runtime ([#4201](https://github.com/cri-o/cri-o/pull/4201), [@haircommander](https://github.com/haircommander))
 
