Update release notes

--- a/v1.20.0-dev.md
+++ b/v1.20.0-dev.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0-dev
 
 The release notes have been generated for the commit range
-[v1.19.0...32cfb72](https://github.com/cri-o/cri-o/compare/v1.19.0...32cfb729bed8d5d17aaa421dd83b518302b76d8e) on Sat, 16 Jan 2021 01:08:04 UTC.
+[v1.19.0...42acc24](https://github.com/cri-o/cri-o/compare/v1.19.0...42acc24ca393bf77dc58692fffbf9122be660486) on Thu, 21 Jan 2021 03:43:49 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-32cfb729b.tar.gz][0]
+[crio-42acc24ca.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-32cfb729b.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-42acc24ca.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -43,6 +43,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - Add support for CRI v1 protocol side by side to the existing v1alpha2 ([#4408](https://github.com/cri-o/cri-o/pull/4408), [@saschagrunert](https://github.com/saschagrunert))
  - Allow using userns together with ManageNSLifecycle ([#4333](https://github.com/cri-o/cri-o/pull/4333), [@kolyshkin](https://github.com/kolyshkin))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
+ - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - Moves shm size to a handler-allowed annotation ([#4402](https://github.com/cri-o/cri-o/pull/4402), [@wgahnagl](https://github.com/wgahnagl))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
 
@@ -56,6 +57,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - CRIO allow to run pods with default runtime profile in the Pod.Spec, if seccomp is disabled ([#4370](https://github.com/cri-o/cri-o/pull/4370), [@aojea](https://github.com/aojea))
  - Crio-o portMapping dual-stack support ([#4361](https://github.com/cri-o/cri-o/pull/4361), [@aojea](https://github.com/aojea))
  - Fix a bug where a timeout in RunPodSandbox or CreateContainer requests caused CRI-O to delete the newly created resource. Now, it saves that resource, until the kubelet re-requests it, thus allowing kubelet and CRI-O to reconcile quicker when nodes are under load. ([#4394](https://github.com/cri-o/cri-o/pull/4394), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
  - Fix bug where runAsUser would only work with runAsGroup if userns annotations were specified ([#4300](https://github.com/cri-o/cri-o/pull/4300), [@haircommander](https://github.com/haircommander))
  - Fix bug where we attempted to chown with the mappings configured on server level, when they could have been from annotations ([#4294](https://github.com/cri-o/cri-o/pull/4294), [@haircommander](https://github.com/haircommander))
  - Fix making /etc/resolv.conf bind-mount to be readonly for a readonly container. ([#4268](https://github.com/cri-o/cri-o/pull/4268), [@kolyshkin](https://github.com/kolyshkin))
@@ -79,7 +81,8 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Update broken link for podman tutorial ([#4179](https://github.com/cri-o/cri-o/pull/4179), [@lovebaby979](https://github.com/lovebaby979))
  - Update broken link for tutorials ([#4180](https://github.com/cri-o/cri-o/pull/4180), [@lovebaby979](https://github.com/lovebaby979))
- - Update nix pin with `make nixpkgs` ([#4184](https://github.com/cri-o/cri-o/pull/4184), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
+ - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
 
