Update release notes

--- a/v1.20.0-dev.md
+++ b/v1.20.0-dev.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0-dev
 
 The release notes have been generated for the commit range
-[v1.19.0...42acc24](https://github.com/cri-o/cri-o/compare/v1.19.0...42acc24ca393bf77dc58692fffbf9122be660486) on Thu, 21 Jan 2021 03:56:17 UTC.
+[v1.19.0...c8f6486](https://github.com/cri-o/cri-o/compare/v1.19.0...c8f64866e9692ff7ab739e5618a51ca9b281e6a6) on Fri, 29 Jan 2021 02:32:03 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-42acc24ca.tar.gz][0]
+[crio-c8f64866e.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-42acc24ca.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-c8f64866e.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -41,11 +41,13 @@ Download the static release bundle via our Google Cloud Bucket:
  - Add `io.kubernetes.cri-o.Devices` annotation to the list interpretable allowed annotations. Now, users can pass in devices they want added to their containers, but only if the runtime class is allowed to use the annotation. ([#4349](https://github.com/cri-o/cri-o/pull/4349), [@haircommander](https://github.com/haircommander))
  - Add option `seccomp_override_empty` to override an unspecified seccomp profile from being unconfined to being the runtime default. Note: setting this option makes CRI-O not fully CRI compliant, but does increase security. ([#4212](https://github.com/cri-o/cri-o/pull/4212), [@haircommander](https://github.com/haircommander))
  - Add support for CRI v1 protocol side by side to the existing v1alpha2 ([#4408](https://github.com/cri-o/cri-o/pull/4408), [@saschagrunert](https://github.com/saschagrunert))
+ - Added `crio-status.8` man page to static release bundle ([#4510](https://github.com/cri-o/cri-o/pull/4510), [@saschagrunert](https://github.com/saschagrunert))
  - Allow using userns together with ManageNSLifecycle ([#4333](https://github.com/cri-o/cri-o/pull/4333), [@kolyshkin](https://github.com/kolyshkin))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - Moves shm size to a handler-allowed annotation ([#4402](https://github.com/cri-o/cri-o/pull/4402), [@wgahnagl](https://github.com/wgahnagl))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
+ - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
 
 #### Design
  - When running under systemd, image pulls happen in a new cgroup ([#4057](https://github.com/cri-o/cri-o/pull/4057), [@giuseppe](https://github.com/giuseppe))
