--- a/v1.20.0.md
+++ b/v1.20.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0
 
 The release notes have been generated for the commit range
-[v1.19.0...845747f](https://github.com/cri-o/cri-o/compare/v1.19.0...845747f7eb03ee8c8e97b29272349baaabbb3166) on Fri, 08 Jan 2021 23:10:07 UTC.
+[v1.19.0...2ef6415](https://github.com/cri-o/cri-o/compare/v1.19.0...2ef641507d27b0d3733ae2ac4b90db374470b7c7) on Thu, 04 Feb 2021 18:18:00 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-845747f7e.tar.gz][0]
+[crio-2ef641507.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-845747f7e.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-2ef641507.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -41,6 +41,9 @@ Download the static release bundle via our Google Cloud Bucket:
  - Add `io.kubernetes.cri-o.Devices` annotation to the list interpretable allowed annotations. Now, users can pass in devices they want added to their containers, but only if the runtime class is allowed to use the annotation. ([#4349](https://github.com/cri-o/cri-o/pull/4349), [@haircommander](https://github.com/haircommander))
  - Add option `seccomp_override_empty` to override an unspecified seccomp profile from being unconfined to being the runtime default. Note: setting this option makes CRI-O not fully CRI compliant, but does increase security. ([#4212](https://github.com/cri-o/cri-o/pull/4212), [@haircommander](https://github.com/haircommander))
  - Allow using userns together with ManageNSLifecycle ([#4333](https://github.com/cri-o/cri-o/pull/4333), [@kolyshkin](https://github.com/kolyshkin))
+ - Bump containers image to v5.10.1 ([#4531](https://github.com/cri-o/cri-o/pull/4531), [@QiWang19](https://github.com/QiWang19))
+ - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4469](https://github.com/cri-o/cri-o/pull/4469), [@haircommander](https://github.com/haircommander))
+ - Support enabling pprof profile over CRI-O's unix socket ([#4520](https://github.com/cri-o/cri-o/pull/4520), [@mrunalp](https://github.com/mrunalp))
 
 #### Design
  - When running under systemd, image pulls happen in a new cgroup ([#4057](https://github.com/cri-o/cri-o/pull/4057), [@giuseppe](https://github.com/giuseppe))
@@ -56,6 +59,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fix bug where we attempted to chown with the mappings configured on server level, when they could have been from annotations ([#4294](https://github.com/cri-o/cri-o/pull/4294), [@haircommander](https://github.com/haircommander))
  - Fix making /etc/resolv.conf bind-mount to be readonly for a readonly container. ([#4268](https://github.com/cri-o/cri-o/pull/4268), [@kolyshkin](https://github.com/kolyshkin))
  - Fix occasional "chown: interrupted system call" error on container creation. ([#4334](https://github.com/cri-o/cri-o/pull/4334), [@kolyshkin](https://github.com/kolyshkin))
+ - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4535](https://github.com/cri-o/cri-o/pull/4535), [@haircommander](https://github.com/haircommander))
  - Fixed bug that all custom sandbox annotations will be passed to OCI hooks and therefore are also available on the containers ([#4138](https://github.com/cri-o/cri-o/pull/4138), [@saschagrunert](https://github.com/saschagrunert))
  - Provide an option to run performance hooks via specifying allowed_annotations under the runtime handler configuration
   [DEPRECATION] The run of performance hooks for the high-performance runtime handler without specifying allowed_annotations will be deprecated under release 1.21
@@ -66,9 +70,12 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fixed a bug where a container creation failure caused that container to leak in the runtime ([#4198](https://github.com/cri-o/cri-o/pull/4198), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4496](https://github.com/cri-o/cri-o/pull/4496), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a goroutine leak when checking image pulling progress ([#4413](https://github.com/cri-o/cri-o/pull/4413), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4462](https://github.com/cri-o/cri-o/pull/4462), [@QiWang19](https://github.com/QiWang19))
  - Moves shm size to a handler-allowed annotation ([#4417](https://github.com/cri-o/cri-o/pull/4417), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Set systemd KillMode to mixed for container scopes modifying behavior on node shutdown ([#4539](https://github.com/cri-o/cri-o/pull/4539), [@mrunalp](https://github.com/mrunalp))
+ - The `registries` option from crio.conf(5) has been deprecated in favour of using containers-registries.conf(5) for configuring unqualified-search registries.  The `registries` option will be removed from CRI-O 1.21. ([#4477](https://github.com/cri-o/cri-o/pull/4477), [@vrothberg](https://github.com/vrothberg))
  - Update broken link for podman tutorial ([#4179](https://github.com/cri-o/cri-o/pull/4179), [@lovebaby979](https://github.com/lovebaby979))
  - Update broken link for tutorials ([#4180](https://github.com/cri-o/cri-o/pull/4180), [@lovebaby979](https://github.com/lovebaby979))
  - Update nix pin with `make nixpkgs` ([#4347](https://github.com/cri-o/cri-o/pull/4347), [@hswong3i](https://github.com/hswong3i))
@@ -106,6 +113,9 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/hashicorp/memberlist: [v0.1.3](https://github.com/hashicorp/memberlist/tree/v0.1.3)
 - github.com/hashicorp/serf: [v0.8.2](https://github.com/hashicorp/serf/tree/v0.8.2)
 - github.com/jmespath/go-jmespath/internal/testify: [v1.5.1](https://github.com/jmespath/go-jmespath/internal/testify/tree/v1.5.1)
+- github.com/juju/ansiterm: [720a095](https://github.com/juju/ansiterm/tree/720a095)
+- github.com/lunixbochs/vtclean: [2d01aac](https://github.com/lunixbochs/vtclean/tree/2d01aac)
+- github.com/manifoldco/promptui: [v0.8.0](https://github.com/manifoldco/promptui/tree/v0.8.0)
 - github.com/mitchellh/cli: [v1.0.0](https://github.com/mitchellh/cli/tree/v1.0.0)
 - github.com/mitchellh/go-testing-interface: [v1.0.0](https://github.com/mitchellh/go-testing-interface/tree/v1.0.0)
 - github.com/mitchellh/gox: [v0.4.0](https://github.com/mitchellh/gox/tree/v0.4.0)
@@ -159,9 +169,9 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/containers/buildah: [v1.14.9 → v1.15.2](https://github.com/containers/buildah/compare/v1.14.9...v1.15.2)
 - github.com/containers/common: [v0.9.1 → v0.21.0](https://github.com/containers/common/compare/v0.9.1...v0.21.0)
 - github.com/containers/conmon: [v2.0.17+incompatible → v2.0.20+incompatible](https://github.com/containers/conmon/compare/v2.0.17...v2.0.20)
-- github.com/containers/image/v5: [v5.5.1 → v5.7.0](https://github.com/containers/image/v5/compare/v5.5.1...v5.7.0)
+- github.com/containers/image/v5: [v5.5.1 → v5.10.1](https://github.com/containers/image/v5/compare/v5.5.1...v5.10.1)
 - github.com/containers/psgo: [v1.4.0 → v1.5.1](https://github.com/containers/psgo/compare/v1.4.0...v1.5.1)
-- github.com/containers/storage: [v1.20.2 → v1.24.4](https://github.com/containers/storage/compare/v1.20.2...v1.24.4)
+- github.com/containers/storage: [v1.20.2 → v1.24.5](https://github.com/containers/storage/compare/v1.20.2...v1.24.5)
 - github.com/coreos/etcd: [v3.3.10+incompatible → v3.3.13+incompatible](https://github.com/coreos/etcd/compare/v3.3.10...v3.3.13)
 - github.com/docker/docker: [aa6a989 → bd33bbf](https://github.com/docker/docker/compare/aa6a989...bd33bbf)
 - github.com/evanphx/json-patch: [e83c0a1 → v4.9.0+incompatible](https://github.com/evanphx/json-patch/compare/e83c0a1...v4.9.0)
@@ -186,7 +196,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [81b9770 → ed3125c](https://github.com/insomniacslk/dhcp/compare/81b9770...ed3125c)
 - github.com/jmespath/go-jmespath: [c2b33e8 → v0.4.0](https://github.com/jmespath/go-jmespath/compare/c2b33e8...v0.4.0)
 - github.com/karrick/godirwalk: [v1.7.5 → v1.16.1](https://github.com/karrick/godirwalk/compare/v1.7.5...v1.16.1)
-- github.com/klauspost/compress: [v1.10.8 → v1.11.6](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.6)
+- github.com/klauspost/compress: [v1.10.8 → v1.11.7](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.7)
 - github.com/klauspost/pgzip: [v1.2.4 → v1.2.5](https://github.com/klauspost/pgzip/compare/v1.2.4...v1.2.5)
 - github.com/kr/pretty: [v0.2.0 → v0.2.1](https://github.com/kr/pretty/compare/v0.2.0...v0.2.1)
 - github.com/maxbrunsfeld/counterfeiter/v6: [v6.2.3 → v6.3.0](https://github.com/maxbrunsfeld/counterfeiter/v6/compare/v6.2.3...v6.3.0)
@@ -214,10 +224,11 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/spf13/cobra: [v1.0.0 → v1.1.1](https://github.com/spf13/cobra/compare/v1.0.0...v1.1.1)
 - github.com/spf13/viper: [v1.6.1 → v1.7.0](https://github.com/spf13/viper/compare/v1.6.1...v1.7.0)
 - github.com/storageos/go-api: [343b3ef → v2.2.0+incompatible](https://github.com/storageos/go-api/compare/343b3ef...v2.2.0)
+- github.com/stretchr/testify: [v1.6.1 → v1.7.0](https://github.com/stretchr/testify/compare/v1.6.1...v1.7.0)
 - github.com/syndtr/gocapability: [d983527 → 42c35b4](https://github.com/syndtr/gocapability/compare/d983527...42c35b4)
 - github.com/uber/jaeger-client-go: [v2.22.1+incompatible → v2.24.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.22.1...v2.24.0)
-- github.com/ulikunitz/xz: [v0.5.7 → v0.5.8](https://github.com/ulikunitz/xz/compare/v0.5.7...v0.5.8)
-- github.com/vbauerster/mpb/v5: [v5.2.2 → v5.3.0](https://github.com/vbauerster/mpb/v5/compare/v5.2.2...v5.3.0)
+- github.com/ulikunitz/xz: [v0.5.7 → v0.5.9](https://github.com/ulikunitz/xz/compare/v0.5.7...v0.5.9)
+- github.com/vbauerster/mpb/v5: [v5.2.2 → v5.4.0](https://github.com/vbauerster/mpb/v5/compare/v5.2.2...v5.4.0)
 - github.com/vishvananda/netns: [52d707b → db3c7e5](https://github.com/vishvananda/netns/compare/52d707b...db3c7e5)
 - github.com/yuin/goldmark: [v1.1.32 → v1.2.1](https://github.com/yuin/goldmark/compare/v1.1.32...v1.2.1)
 - go.etcd.io/etcd: 18dfb9c → dd1b699
