Update release notes

--- a/v1.20.0.md
+++ b/v1.20.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0
 
 The release notes have been generated for the commit range
-[v1.19.0...2ef6415](https://github.com/cri-o/cri-o/compare/v1.19.0...2ef641507d27b0d3733ae2ac4b90db374470b7c7) on Thu, 04 Feb 2021 18:18:00 UTC.
+[v1.19.0...78527db](https://github.com/cri-o/cri-o/compare/v1.19.0...78527db3627ddbd6b1ed03064d548c29473efa8a) on Fri, 05 Feb 2021 05:00:10 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-2ef641507.tar.gz][0]
+[crio-78527db36.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-2ef641507.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-78527db36.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -74,11 +74,12 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fix a goroutine leak when checking image pulling progress ([#4413](https://github.com/cri-o/cri-o/pull/4413), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4462](https://github.com/cri-o/cri-o/pull/4462), [@QiWang19](https://github.com/QiWang19))
  - Moves shm size to a handler-allowed annotation ([#4417](https://github.com/cri-o/cri-o/pull/4417), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Set conmon scope KillSignal to SIGPIPE ([#4546](https://github.com/cri-o/cri-o/pull/4546), [@mrunalp](https://github.com/mrunalp))
  - Set systemd KillMode to mixed for container scopes modifying behavior on node shutdown ([#4539](https://github.com/cri-o/cri-o/pull/4539), [@mrunalp](https://github.com/mrunalp))
  - The `registries` option from crio.conf(5) has been deprecated in favour of using containers-registries.conf(5) for configuring unqualified-search registries.  The `registries` option will be removed from CRI-O 1.21. ([#4477](https://github.com/cri-o/cri-o/pull/4477), [@vrothberg](https://github.com/vrothberg))
  - Update broken link for podman tutorial ([#4179](https://github.com/cri-o/cri-o/pull/4179), [@lovebaby979](https://github.com/lovebaby979))
  - Update broken link for tutorials ([#4180](https://github.com/cri-o/cri-o/pull/4180), [@lovebaby979](https://github.com/lovebaby979))
- - Update nix pin with `make nixpkgs` ([#4347](https://github.com/cri-o/cri-o/pull/4347), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4249](https://github.com/cri-o/cri-o/pull/4249), [@hswong3i](https://github.com/hswong3i))
 
 ## Dependencies
 
