Update release notes

--- a/v1.20.0-dev.md
+++ b/v1.20.0-dev.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0-dev
 
 The release notes have been generated for the commit range
-[v1.19.0...c75afa5](https://github.com/cri-o/cri-o/compare/v1.19.0...c75afa5b3515a7ab2f6a6c9517f081a3bae75111) on Mon, 01 Feb 2021 22:40:03 UTC.
+[v1.19.0...36c46c1](https://github.com/cri-o/cri-o/compare/v1.19.0...36c46c10fbc1c219157047288d8c3ebc3f82a51b) on Sat, 06 Feb 2021 03:02:16 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-c75afa5b3.tar.gz][0]
+[crio-36c46c10f.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-c75afa5b3.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-36c46c10f.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -45,6 +45,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - Allow using userns together with ManageNSLifecycle ([#4333](https://github.com/cri-o/cri-o/pull/4333), [@kolyshkin](https://github.com/kolyshkin))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
+ - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
  - Moves shm size to a handler-allowed annotation ([#4402](https://github.com/cri-o/cri-o/pull/4402), [@wgahnagl](https://github.com/wgahnagl))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
@@ -211,6 +212,8 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/moby/vpnkit: [6bc1679 → v0.4.0](https://github.com/moby/vpnkit/compare/6bc1679...v0.4.0)
 - github.com/onsi/ginkgo: [v1.14.0 → v1.14.1](https://github.com/onsi/ginkgo/compare/v1.14.0...v1.14.1)
 - github.com/onsi/gomega: [v1.10.1 → v1.10.3](https://github.com/onsi/gomega/compare/v1.10.1...v1.10.3)
+- github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
+- github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
 - github.com/opencontainers/selinux: [v1.5.2 → v1.8.0](https://github.com/opencontainers/selinux/compare/v1.5.2...v1.8.0)
 - github.com/openshift/imagebuilder: [v1.1.4 → v1.1.6](https://github.com/openshift/imagebuilder/compare/v1.1.4...v1.1.6)
 - github.com/pkg/diff: [5319263 → 5b29258](https://github.com/pkg/diff/compare/5319263...5b29258)
