Update release notes

--- a/v1.20.0.md
+++ b/v1.20.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0
 
 The release notes have been generated for the commit range
-[v1.19.0...78527db](https://github.com/cri-o/cri-o/compare/v1.19.0...78527db3627ddbd6b1ed03064d548c29473efa8a) on Fri, 05 Feb 2021 05:00:10 UTC.
+[v1.19.0...8921e00](https://github.com/cri-o/cri-o/compare/v1.19.0...8921e00fdb188446b1cde28d06f8e3d6893f1e79) on Tue, 09 Feb 2021 01:32:28 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-78527db36.tar.gz][0]
+[crio-8921e00fd.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-78527db36.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-8921e00fd.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -74,6 +74,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fix a goroutine leak when checking image pulling progress ([#4413](https://github.com/cri-o/cri-o/pull/4413), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4462](https://github.com/cri-o/cri-o/pull/4462), [@QiWang19](https://github.com/QiWang19))
  - Moves shm size to a handler-allowed annotation ([#4417](https://github.com/cri-o/cri-o/pull/4417), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Revert systemd KillMode to control-group (default) ([#4547](https://github.com/cri-o/cri-o/pull/4547), [@mrunalp](https://github.com/mrunalp))
  - Set conmon scope KillSignal to SIGPIPE ([#4546](https://github.com/cri-o/cri-o/pull/4546), [@mrunalp](https://github.com/mrunalp))
  - Set systemd KillMode to mixed for container scopes modifying behavior on node shutdown ([#4539](https://github.com/cri-o/cri-o/pull/4539), [@mrunalp](https://github.com/mrunalp))
  - The `registries` option from crio.conf(5) has been deprecated in favour of using containers-registries.conf(5) for configuring unqualified-search registries.  The `registries` option will be removed from CRI-O 1.21. ([#4477](https://github.com/cri-o/cri-o/pull/4477), [@vrothberg](https://github.com/vrothberg))
@@ -181,6 +182,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/go-git/go-git/v5: [v5.1.0 → v5.2.0](https://github.com/go-git/go-git/v5/compare/v5.1.0...v5.2.0)
 - github.com/go-gl/glfw/v3.3/glfw: [12ad95a → 6f7a984](https://github.com/go-gl/glfw/v3.3/glfw/compare/12ad95a...6f7a984)
 - github.com/go-sql-driver/mysql: [v1.4.0 → v1.5.0](https://github.com/go-sql-driver/mysql/compare/v1.4.0...v1.5.0)
+- github.com/gogo/protobuf: [v1.3.1 → v1.3.2](https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2)
 - github.com/golang/groupcache: [215e871 → 8c9f03a](https://github.com/golang/groupcache/compare/215e871...8c9f03a)
 - github.com/golang/mock: [v1.4.3 → v1.4.4](https://github.com/golang/mock/compare/v1.4.3...v1.4.4)
 - github.com/google/cadvisor: [v0.37.0 → v0.38.5](https://github.com/google/cadvisor/compare/v0.37.0...v0.38.5)
@@ -197,6 +199,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [81b9770 → ed3125c](https://github.com/insomniacslk/dhcp/compare/81b9770...ed3125c)
 - github.com/jmespath/go-jmespath: [c2b33e8 → v0.4.0](https://github.com/jmespath/go-jmespath/compare/c2b33e8...v0.4.0)
 - github.com/karrick/godirwalk: [v1.7.5 → v1.16.1](https://github.com/karrick/godirwalk/compare/v1.7.5...v1.16.1)
+- github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
 - github.com/klauspost/compress: [v1.10.8 → v1.11.7](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.7)
 - github.com/klauspost/pgzip: [v1.2.4 → v1.2.5](https://github.com/klauspost/pgzip/compare/v1.2.4...v1.2.5)
 - github.com/kr/pretty: [v0.2.0 → v0.2.1](https://github.com/kr/pretty/compare/v0.2.0...v0.2.1)
@@ -244,7 +247,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - golang.org/x/term: ad39bd3 → 7de9c90
 - golang.org/x/text: v0.3.3 → v0.3.4
 - golang.org/x/time: 555d28b → 3af7569
-- golang.org/x/tools: c1934b7 → 079ba7b
+- golang.org/x/tools: c1934b7 → 113979e
 - golang.org/x/xerrors: 9bdfabe → 5ec99f8
 - google.golang.org/api: v0.21.0 → v0.35.0
 - google.golang.org/appengine: v1.6.5 → v1.6.6
